--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/router": "~12.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "y-indexeddb": "^9.0.6",
+    "y-webrtc": "^10.2.0",
+    "y-websocket": "^1.3.16",
+    "yjs": "^13.5.12",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
